--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,6 +14,7 @@ a:link {
 
 html {
   font-size: 62.5%; // 1rem = 10rem ; 10/16=62.5%
+  overflow-x: hidden;
 
   @include respond(big-desktop) {
     font-size: 75%; // 1rem = 12px; 12/16 = 75%
@@ -30,10 +31,9 @@ html {
 
 body {
   box-sizing: border-box;
-  overflow-x: hidden;
 
   @include respond(tab-port) {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 }
 
