--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -14,7 +14,7 @@ nav {
 
   &__item {
     display: inline-block;
-    overflow: hidden;
+    position: fixed;
 
     @include respond(tab-port) {
       opacity: 0;
@@ -79,7 +79,7 @@ nav {
     }
 
     @include respond(tab-port) {
-      position: absolute;
+      position: fixed;
       right: 0;
       top: 10vh;
       height: 90vh;
